<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="@dimen/bmi_h_guideline_percent"/>

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" tools:srcCompat="@drawable/bmi_main"
            android:id="@+id/bmi_main_image" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="visible" app:srcCompat="@drawable/bmi_main"
            android:layout_marginBottom="@dimen/bmi_margin_bottom_main_img"
            app:layout_constraintBottom_toTopOf="@+id/guideline" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" android:layout_marginTop="@dimen/bmi_margin_top"/>
    <TextView
            android:text="@string/bmi_main_mass_kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/massTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/bmi_margin_left_right"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/bmi_margin_left_right"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintTop_toTopOf="@+id/guideline" android:textSize="@dimen/bmi_mass_label_text_size"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/massInput"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/bmi_margin_left_right"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/bmi_margin_left_right"
            app:layout_constraintTop_toBottomOf="@+id/massTextView"
            android:textAppearance="@style/TextAppearance.AppCompat"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/bmi_main_default_bmi_display_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bmiValueTextV" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/bmi_margin_left_right" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/bmi_margin_left_right"
            android:layout_marginTop="@dimen/bmi_margin_top_elements"
            app:layout_constraintTop_toBottomOf="@+id/heightInput"
            android:layout_marginBottom="@dimen/bmi_margin_bottom_elements"
            app:layout_constraintBottom_toTopOf="@+id/countButton"
            android:textSize="@dimen/bmi_value_text_size" android:textStyle="bold"
            app:layout_constraintVertical_bias="0.39"/>
    <Button
            android:text="@string/bmi_main_count_bmi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/countButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/bmi_margin_left_right" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/bmi_margin_bottom_elements" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/bmi_margin_left_right"
            android:textSize="@dimen/bmi_calculate_button_text_size"/>
    <TextView
            android:text="@string/bmi_main_height_cm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/heightTextView"
            app:layout_constraintTop_toBottomOf="@+id/massInput" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/bmi_margin_left_right" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/bmi_margin_left_right" app:layout_constraintHorizontal_bias="0.084"
            android:textSize="@dimen/bmi_height_label_text_size"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/heightInput"
            app:layout_constraintTop_toBottomOf="@+id/heightTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/bmi_margin_left_right" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/bmi_margin_left_right"
            android:textAppearance="@style/TextAppearance.AppCompat"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/bmi_main_bmi_default_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bmiDescription" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/bmi_margin_left_right"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/bmi_margin_left_right"
            app:layout_constraintTop_toBottomOf="@+id/bmiValueTextV"
            android:layout_marginBottom="@dimen/bmi_margin_bottom"
            app:layout_constraintBottom_toTopOf="@+id/countButton" app:layout_constraintVertical_bias="0.0"
            android:textSize="@dimen/bmi_status_text_size"/>
    <ImageView
            android:layout_width="51dp"
            android:layout_height="53dp" app:srcCompat="@android:drawable/ic_menu_info_details"
            android:id="@+id/bmi_description_button"
            app:layout_constraintStart_toEndOf="@+id/bmiValueTextV" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/heightInput" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/countButton" app:layout_constraintVertical_bias="0.39"
            app:layout_constraintHorizontal_bias="0.0" tools:srcCompat="@android:drawable/ic_menu_info_details"/>
</androidx.constraintlayout.widget.ConstraintLayout>